fix: align content in zoogeography block

--- a/online-zoo/pages/landing/landing.css
+++ b/online-zoo/pages/landing/landing.css
@@ -1430,9 +1430,9 @@ header {
     height: 448px;
   }
   .zoogeography__map {
-    width: 675px;
-    height: 389px;
-    background-size: 675px 389px;
+    width: 56.25vw;
+    height: 32.4vw;
+    background-size: 56.25vw 32.4vw;
     margin: 86px 0 0 9px;
   }
   .zoogeography__h2 {
@@ -1451,7 +1451,7 @@ header {
     line-height: 19px;
   }
   .zoogeography__animal-info {
-    padding: 20px 17px 44px;
+    padding: 15px 17px 44px;
     height: 254px;
   }
   .zoogeography__mark_deactive:hover .zoogeography__svg-mark {
@@ -1467,20 +1467,20 @@ header {
     height: auto;
   }
   .zoogeography__mark_item1 {
-    top: 181px;
-    left: 98px;
+    top: 46%;
+    left: 14.5%;
   }
   .zoogeography__mark_item2 {
-    top: 189px;
-    left: 169px;
+    top: 48%;
+    left: 25%;
   }
   .zoogeography__mark_item3 {
-    top: 241px;
-    left: 329px;
+    top: 61%;
+    left: 48.5%;
   }
   .zoogeography__mark_item4 {
-    top: 179px;
-    left: 512px;
+    top: 45%;
+    left: 76%;
   }
   .zoogeography__mark-animal {
     top: 33%;
